Used javascript to ensure that the search bar doesn't collapse when clicked inside nav element and collapses when clicked anywhere else

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -85,7 +85,7 @@
           transition: width 0.1s ease-in-out;
           &:focus {
             outline: none;
-            width: 560px;
+            //width: 560px;
           }
         }
 
